# metallica-weekend

./: Cargo.toml  Shuttle.toml
src/: main.rs
static/: screen.css  scripts.js
templates/: base.html.tera  index.html.tera
