[package]
name = "metallica-weekend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = [ "tera" ] }
shuttle-rocket = { git = "https://github.com/shuttle-hq/shuttle" }
shuttle-runtime = { git = "https://github.com/shuttle-hq/shuttle" }
